--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@
     margin-bottom: 20px;
     margin-left: 400px;
     margin-top: 100px;
+    color: rgb(168, 166, 164);
   }
   
   .card-grid {
