--- a/style.css
+++ b/style.css
@@ -228,4 +228,10 @@
       gap: 20px;
       margin-top: 40px;
     }  
-  
+      select {
+      width: 150px;
+      padding: 10px;
+      font-size: 15px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
