--- a/style.css
+++ b/style.css
@@ -235,3 +235,17 @@
       border-radius: 8px;
       border: 1px solid #ccc;
     }
+button{
+  background-color: green;
+  color: white;
+  width: 100px;
+  height: 25px;
+  margin-top: 30px;
+  border: none;
+  border-radius: 5px;
+}
+button:hover{
+  background-color: greenyellow;
+  color: black;
+  
+}
